syntax = "proto3";

package documentblockchain.documentblockchain;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "documentblockchain/documentblockchain/params.proto";
import "documentblockchain/documentblockchain/document.proto";

option go_package = "documentblockchain/x/documentblockchain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/documentblockchain/documentblockchain/params";
  
  }
  
  // Queries a list of Document items.
  rpc Document    (QueryGetDocumentRequest) returns (QueryGetDocumentResponse) {
    option (google.api.http).get = "/documentblockchain/documentblockchain/document/{id}";
  
  }
  rpc DocumentAll (QueryAllDocumentRequest) returns (QueryAllDocumentResponse) {
    option (google.api.http).get = "/documentblockchain/documentblockchain/document";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetDocumentRequest {
  uint64 id = 1;
}

message QueryGetDocumentResponse {
  Document Document = 1 [(gogoproto.nullable) = false];
}

message QueryAllDocumentRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDocumentResponse {
  repeated Document                               Document   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

